tests/deriving/should_fail/T1133A.hs
{-# LANGUAGE Haskell2010 #-}

module T1133A where

import T1133Aa

newtype X = X Int deriving Enum
